//copyright 2013 Computer Science Department, Recursive InterNetworking Architecture (RINA) laboratory, Boston University.
//All rights reserved. Permission to use, copy, modify, and distribute this software and its documentation for any purpose 
//and without fee is hereby granted, provided that the above copyright notice appear in all copies and that both the 
//copyright notice and this permission notice appear in supporting documentation. The RINA laboratory of the Computer 
//Science Department at Boston University makes no representations about the suitability of this software for any purpose.
//It is provided "as is" without express or implied warranty.

package rina.object.gpb;

enum eventType_t
{
	SUB = 0;
	PUB = 1;
}

enum actionType_t
{
	NOTIFY = 0;
	RECORD = 1;
}

message subscriptionEvent_t{  //Contains the information for a pub/sub event

	required eventType_t eventType = 1;
	repeated string attributeList = 2;
	optional int32 subscriptionID = 3;
	optional string relationExpression = 4;
	optional double tolerance = 5; 
	repeated string memberList = 6;
	optional actionType_t actionType = 7;
        optional double updatePeriod = 8;
        optional bytes	value = 9;

	
}